# sucuri

./: .gitignore  CLAUDE.md  EXTERNAL.md  LICENSE  README.md  ROADMAP.md  coletar_despesas.py  coletar_despesas_ensino_superior.py  pyproject.toml
analises/: 00_baixar_ipca.py  00b_baixar_ibge.py  01_qualidade.py  01b_deflacionar.py  01c_ano_parcial_e_flags.py  02_eda.py  03_benford.py  04_outliers.py  05_series.py  06_casos.py  07_despesas_documentos.py  08_contratos.py  09_licitacoes.py  10_sancoes.py  11_convenios.py  12_cartoes.py  13_emendas.py  14_ibge_cruzamento.py
dados/: DICIONARIO.md  casos_priorizados.csv  contratos_com_sancionados.csv  contratos_mec.parquet  convenios_mec.parquet  cpgf_mec.parquet  despesas_ensino_superior.csv  despesas_ensino_superior.parquet  despesas_ensino_superior_real.csv  despesas_ensino_superior_real.parquet  despesas_ensino_superior_scores.parquet  despesas_ensino_superior_v2.csv  despesas_ensino_superior_v2.parquet  despesas_por_instituicao.csv  despesas_por_instituicao.parquet  despesas_por_instituicao_real.csv  despesas_por_instituicao_real.parquet  despesas_por_instituicao_scores.parquet  despesas_por_instituicao_v2.csv  despesas_por_instituicao_v2.parquet  despesas_univ_piloto_364.parquet  emendas_educacao.parquet  emendas_per_capita_uf.csv  emendas_por_pib_uf.csv  eventos_series.csv  licitacoes_mec.parquet  per_capita_nacional.csv  sancoes.parquet
painel/: app.py
relatorios/: 01_qualidade.md  02_eda.md  03_benford.md  04_outliers.md  05_series.md  06_casos.md  07_despesas_documentos.md  08_contratos.md  09_licitacoes.md  (+6 more)
(+59 files in other folders)
