[project]
name = "sucuri"
version = "26.7.3"
description = "Detecção de anomalias em despesas públicas do Portal da Transparência (Ensino Superior)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
painel = [
    "streamlit>=1.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sucuri"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
